# swissknife-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: config.rs  main.rs  shouldideploytoday.rs
src/generate/: generate_cmd.rs  key.rs  passphrase.rs  password.rs  qrcode.rs  ssh_key.rs
src/get/: get_cmd.rs  iface.rs  ip.rs  sensors.rs  system_info.rs  volumes.rs
src/utils/: clipboard.rs
