[package]
name = "swissknife"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap-cargo = "0.15.2"
colored = "3.0.0"
default-net = "0.22.0"
log = "0.4.27"
passwords = "3.1.16"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.0"
