[package]
name = "swissknife"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
clap-cargo = "0.15.2"
colored = "3.0.0"
default-net = "0.22.0"
log = "0.4.27"
passforge = "0.1.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.0"
rand = "0.8.5"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["pem", "pkcs8", "rand_core"] }
tabled = { version = "0.20.0", features = ["ansi"] }
bytesize = "2.0.1"
users = "0.11.0"
battery = "0.7.8"
clap_complete = "4.5.55"
